syntax = "proto3";

import "google/protobuf/struct.proto";


/**
 * IOType is a way to specify Input or Output.
 * 
 */
enum IOType {
    INPUT = 0;  /// Input Signal
    OUTPUT = 1; /// Output Signal
}

message UpdateSignal {
    IOType io = 1; /// Is this a Input or Output
    string class = 2; /// Is this a PWM, Digital, Analog, I2C, etc.
    google.protobuf.Value value = 3; /// 
}

message UpdateSignals {
    string name = 1;
    map<string, UpdateSignal> signalMap = 2;
}